take schemaId from query in CollectionsController.AddMetaDataColumn
